# deepref

./: .dockerignore  .editorconfig  .env.example  .fallowrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.agents/skills/runed/: SKILL.md
.agents/skills/runed/references/: elements.md  reactivity.md  sensors-browser.md  state.md  utilities-component.md
.agents/skills/shadcn-svelte-extras/: SKILL.md
.agents/skills/shadcn-svelte-extras/references/: actions.md  components.md  hooks.md
.agents/skills/svelte-query/: SKILL.md
.agents/skills/svelte-query/examples/: auto-refetch.svelte  basic-query.svelte  infinite-scroll.svelte  mutation.svelte  optimistic-updates.svelte  queries.ts
.agents/skills/svelte-query/examples/ssr/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
.agents/skills/svelte-query/references/: api-reference.md  devtools.md  infinite-queries.md  migration-v5-to-v6.md  mutations.md  queries.md  ssr.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: branch-policy.yml  ci.yml  release.yml  security.yml
apps/web/: .dockerignore  Caddyfile  Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  jsrepo.config.ts  orval.config.ts  package.json  svelte.config.js
apps/web/src/: app.html
apps/web/src/lib/actions/: typewriter.svelte.ts
apps/web/src/lib/api/: custom-fetch.spec.ts  custom-fetch.ts  helpers.spec.ts  helpers.ts  query-client.spec.ts  query-client.ts
apps/web/src/lib/components/: LoadingButton.svelte
apps/web/src/lib/components/app/: AppHeader.svelte
apps/web/src/lib/components/project/: ArticleInspector.svelte  IngestionInspector.svelte  ProjectArticlesView.svelte  ProjectCreateForm.svelte  ProjectGraphView.svelte  ProjectIngestionsView.svelte  ProjectOverview.svelte  ProjectRecommendationsView.svelte  ProjectSelector.svelte  ProjectSidebar.svelte  ProjectWorkspace.svelte  ProjectWorkspaceDesktop.svelte  ProjectWorkspaceEmptyState.svelte  ProjectWorkspaceMobile.svelte  ProjectWorkspaceViewPanel.svelte  constants.ts  context.svelte.ts  types.ts  url.spec.ts  url.ts
apps/web/src/lib/components/ui/: close-button.svelte
apps/web/src/lib/components/ui/badge/: badge.svelte
apps/web/src/lib/components/ui/button/: button.svelte
apps/web/src/lib/components/ui/command/: command-group.svelte
apps/web/src/lib/components/ui/copy-button/: copy-button.svelte
apps/web/src/lib/components/ui/dialog/: dialog-content.svelte
apps/web/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
apps/web/src/lib/components/ui/field/: field-label.svelte  field-separator.svelte
apps/web/src/lib/components/ui/number-field/: number-field-decrement.svelte  number-field-increment.svelte  number-field-input.svelte  number-field.svelte.ts  types.ts
apps/web/src/lib/components/ui/scroll-area/: scroll-area.svelte
apps/web/src/lib/components/ui/sheet/: sheet-content.svelte  sheet-overlay.svelte
apps/web/src/lib/components/ui/sidebar/: sidebar-menu-button.svelte  sidebar.svelte
apps/web/src/lib/components/ui/slider/: slider.svelte
apps/web/src/lib/components/ui/stepper/: stepper-item.svelte  stepper-trigger.svelte
apps/web/src/lib/components/ui/tags-input/: index.ts  tags-input.svelte
apps/web/src/lib/components/ui/terminal/: terminal-animated-span.svelte  terminal-loading.svelte  terminal-typing-animation.svelte  terminal.svelte  terminal.svelte.ts
apps/web/src/lib/components/ui/theme-selector/: theme-selector.svelte
apps/web/src/lib/components/ui/toggle-group/: toggle-group-item.svelte
apps/web/src/lib/hooks/: use-clipboard.svelte.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  +page.ts  page.svelte.e2e.ts
apps/web/src/routes/ingestions/: +page.svelte
apps/web/src/routes/ingestions/[ingestionId]/: +page.svelte
apps/web/src/routes/projects/: +page.svelte
apps/web/src/routes/projects/[projectId]/: +page.svelte
apps/web/src/routes/projects/[projectId]/articles/: +page.svelte
apps/web/src/routes/projects/[projectId]/articles/[doiKey]/: +page.svelte
apps/web/src/routes/projects/[projectId]/graph/: +page.svelte  page.svelte.e2e.ts
apps/web/src/routes/projects/[projectId]/recommendations/: +page.svelte
apps/web/src/routes/settings/: +page.svelte
apps/web/src/routes/system/: +page.svelte
apps/web/static/: env.js
crates/core/: Cargo.toml
crates/core/src/: article.rs  doi.rs  ingestion.rs  lib.rs  project.rs  reference.rs  work.rs
crates/crossref/: Cargo.toml
crates/crossref/src/: client.rs  error.rs  lib.rs  status.rs  wire.rs
crates/events/: Cargo.toml
crates/events/src/: envelope.rs  lib.rs  metrics.rs  subjects.rs  work.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs  queries.rs  references.rs  upsert.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  rank.rs
docker/: rust-service.Dockerfile
docs/: api.md  architecture.md  openapi.json
examples/docker-compose/: .env.example  README.md  docker-compose.selfhost.yml
infra/: docker-compose.yml
infra/neo4j/: constraints.cypher
scripts/: check-api-codegen.sh
services/api/: Cargo.toml
services/api/migrations/: 0001_initial.sql  0002_metrics.sql  0003_outbox_claims.sql
services/api/src/: config.rs  error.rs  main.rs  nats.rs  outbox.rs  state.rs
services/api/src/routes/: articles.rs  health.rs  ingestions.rs  mod.rs  projects.rs  settings.rs
services/worker/: Cargo.toml
services/worker/src/: config.rs  limiter.rs  main.rs  nats.rs  outbox.rs  processor.rs  store.rs
