[package]
name = "deepref-crossref"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepref-core = { version = "0.1.0", path = "../core" }
chrono.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
urlencoding.workspace = true
