[package]
name = "deepref-events"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepref-core = { version = "0.1.0", path = "../core" }
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
