[package]
name = "deepref-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepref-core = { version = "0.1.0", path = "../core" }
deepref-graph = { version = "0.1.0", path = "../graph" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
