[package]
name = "deepref-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepref-core = { version = "0.1.0", path = "../../crates/core" }
deepref-events = { version = "0.1.0", path = "../../crates/events" }
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
